--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/purchase.js"></script>
 </body>
 </html>
