Added base Ant save

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="queens">
         <ul>
-            <li id="q1"><button onclick="addItem('queen')">Queen</button></li>
+            <li id="q1"><button onClick="addItem('queen')">Queen</button></li>
             <li id="q2">Queens Chamber</li>
             <li id="q3">Attentive Daughters</li>
             <li id="q4">Pheromones</li>
@@ -37,7 +37,7 @@
         </ul>
     </section>
 
-    <section id="harvest">
+    <!-- <section id="harvest">
         <ul>
             <li id="h1">Leaves</li>
             <li id="h2">Grain</li>
@@ -65,7 +65,7 @@
             <li id="w9">Bullet</li>
             <li id="w10">Army</li>
             <li id="w11">Metallic</li>
-        </ul>
+        </ul> -->
     </section>
 
     <section id="data-elements">
